# kit_gmail

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/kit_gmail/: __init__.py
src/kit_gmail/cli/: __init__.py  main.py
src/kit_gmail/cli/commands/: __init__.py  auth.py  cleanup.py  config.py  contacts.py  summarize.py
src/kit_gmail/core/: __init__.py  email_processor.py  gmail_auth.py  gmail_manager.py
src/kit_gmail/services/: __init__.py  ai_service.py  contact_manager.py
src/kit_gmail/utils/: __init__.py  config.py  logger.py  security.py
tests/: __init__.py  conftest.py
tests/integration/: test_gmail_integration.py
tests/unit/: test_ai_service.py  test_contact_manager.py  test_email_processor.py  test_gmail_auth.py
